dev-stack-manager: Fixed the dynamic stack codes so that the tests should pass when run normally or during the building of the respective container images.